package com.yyf.app.ch602;

/**
 * 销售接口
 * @author YYF.
 * date 2023/3/9 00:25.
 */
public interface ISale {

    double acceptCash(double price, int num);
}
